<resources>
    <string name="app_name">chap03</string>
    <string name="simple_calculator">简单计数器</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
    <string name="clear">CE</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="reciprocal">1/x</string>
    <string name="back">C</string>
    <string name="weather_01">晴天</string>
    <string name="useApi">调用API</string>
    <string name="title_activity_ui_yin_yang_eye">UI_YinYangEyeActivity</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">上传图片</string>
    <string name="title_notifications">关于</string>
    <string name="upload_button">点击上传图片</string>
    <string name="startApp">开启监控</string>
    <string name="stopApp">停止监控</string>
    <string name="title_activity_test_bottom">TestBottomActivity</string>
    <string name="confidence">Confidence:</string>
    <string name="use_api">Use API</string>
    <string name="image_description">图片描述</string>
    <string name="history">历史记录</string>
    <string name="uploadImage">上传图片</string>
    <string name="resultofUpload">上传结果将显示在这里</string>
    <string name="stopService">关闭服务</string>
    <string name="startService">开启服务</string>
    <string name="instruction">使用说明:点击上面的开启服务按钮，会弹出一个授权框，选择整个屏幕并允许即可开启监控服务。当视频通话中监测到有AI生成的状况，会弹出相应警告。服务在首次启动时会可能会闪退，此时请检查是否授权完整，然后重新开启服务。</string>
    <string name="homeTitle">AI阴阳眼</string>
    <string name="修改网址输入框">请输入网址</string>
    <string name="修改网址按钮">设置新网址</string>
</resources>