<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.PhoneOnOrNot.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startService"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="20dp">

    </Button>

    <Button
        android:id="@+id/stop_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopService"
        android:gravity="center"
        android:textSize="20sp">

    </Button>

    <Button
        android:id="@+id/btn_view_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:gravity="center"
        android:textSize="20sp">

    </Button>

</LinearLayout>