<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.YinYangEye.ui.dashboard.DashboardFragment"
    android:orientation="vertical"
    android:background="@drawable/background3">


    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadImage"
        android:layout_marginTop="20dp" />



    <Button
        android:id="@+id/btn_view_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20sp"/>

    <TextView
        android:id="@+id/tv_upload_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultofUpload"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:background="@color/white" />
</LinearLayout>